# ZE-SilentSync

./: .gitignore  README.md  SETUP.md  docker-compose.yml  reproduce_bugs.py  reproduce_issue.py  start_demo.sh
.agent/rules/: ff.md  rule.md  rules.md
.github/workflows/: ci.yml
agent/: Cargo.toml  config.toml
agent/src/: main.rs
backend/: .env.example  Dockerfile  auth.py  check_admin.py  config.py  database.py  debug_api.py  debug_db.py  diagnose_db.py  generate_secret.py  inspect_hostname.py  ldap_service.py  list_deployments.py  list_machines.py  main.py  models.py  requirements.txt  seed_now.py  verify_fixes.py
backend/routers/: agent.py  auth.py  management.py
backend/tests/: reproduce_bugs.py  reproduce_bugs_new.py  test_main.py  test_management_flow.py  verify_fixes.py  verify_fixes_static.py  verify_fixes_v2.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AddSoftwareModal.tsx  DeploymentWizard.tsx  DeploymentsView.tsx  Login.tsx  MachinesView.tsx  SoftwareLibrary.tsx
