[package]
name = "ze-silentsync-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
mac_address = "1.1"
whoami = "1.4"
