[package]
name = "ze-silentsync-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
mac_address = "1.1"
whoami = "1.4"
config = "0.13"
winreg = "0.10"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
